--- a/recipe.html
+++ b/recipe.html
@@ -5,14 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
-    <h1>Carrot Cake</h1>
-        <img 
+    <h1 id="title">Carrot Cake</h1>
+        <img id="picture"
             src="https://www.allrecipes.com/thmb/hz54Dw9cCRehCTe6ZyF2IGeRo9Y=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7402-carrot-cake-iii-sarah-dipity-1x1-1-2e7c90d8c07c47039b4906ec01911015.jpg"
             alt="A photo of a carrot cake with pecans"
-            height="200"
+            height="300"
+            width="300"
         />
-    <h3>Description</h3>
-        <p>This carrot cake recipe with a homemade cream cheese frosting is my favorite, and I have tried many carrot cakes! It's moist, easy to make with grated carrots, and so delicious!</p>
+    <h3 class="sectionHeadings">Description</h3>
+        <p id="caption">This carrot cake recipe with a homemade cream cheese frosting is my favorite, and I have tried many carrot cakes! It's moist, easy to make with grated carrots, and so delicious!</p>
+    <h3 class="sectionHeadings">Ingredients</h3>
+        <ul class="lists" id="bulletList">
+            <h4 class="subheading">Cake:</h4>
+                <li>2 cups white sugar</li>
+                <li>1 ¼ cups vegetable oil</li>
+                <li>4 large eggs</li>
+                <li>2 teaspoons vanilla extract</li>
+                <li>2 cups all-purpose flour</li>
+                <li>2 teaspoons baking soda</li>
+                <li>2 teaspoons baking powder</li>
+                <li>2 teaspoons ground cinnamon</li>
+                <li>½ teaspoon salt</li>
+                <li>3 cups grated carrots</li>
+                <li>1 cup chopped pecans</li>
+            <h4 class="subheading">Frosting:</h4>
+                <li>½ cup butter, softened</li>
+                <li>8 ounces cream cheese, softened</li>
+                <li>4 cups confectioners' sugar</li>
+                <li>1 teaspoon vanilla extract</li>
+                <li>1 cup chopped pecans</li>
+        </ul>
+    <h3 class="sectionHeadings">Instructions</h3>
+        <ol class="lists" id="numberedList">
+            <li>Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 9x13-inch pan.</li>
+            <li>Beat sugar, oil, eggs, and 2 teaspoons vanilla together in a large bowl with an electric mixer until well combined.</li>
+            <li>Mix in flour, baking soda, baking powder, cinnamon, and salt. Stir in carrots. Fold in pecans.</li>
+            <li>Pour into the prepared pan.</li>
+            <li>Bake in the preheated oven until a toothpick inserted into the center of the cake comes out clean, about 40 minutes. Let cool in the pan for 10 minutes, then turn out onto a wire rack and cool completely.</li>
+            <li>To make the frosting: Beat butter, cream cheese, confectioners' sugar, and 1 teaspoon vanilla together in a large bowl with an electric mixer until smooth and creamy.</li>
+            <li>Stir in chopped pecans.</li>
+            <li>Frost the cooled cake. Serve and enjoy!</li>
+        </ol>
 </body>
+</link>
 </html>
